# chat

./: .gitignore  CMakeLists.txt  README.md  chat.sql  json_test.cpp
client/ChatClient/: ChatClient.sln  ChatClient.vcxproj  ChatClient.vcxproj.filters  Global.cpp  Global.h  HttpMgr.cpp  HttpMgr.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  Singleton.h  main.cpp
client/ChatClient/style/: stylesheet.qss
cmake/: muduo.cmake
server/gate_server/GateServer/: CServer.cpp  CServer.h  GateServer.cpp  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  const.h  packages.config
src/: CMakeLists.txt  public.hpp
src/model/: user.hpp  user_model.cpp  user_model.hpp
src/server/: CMakeLists.txt  chat_server.cpp  chat_server.hpp  chat_service.cpp  chat_service.hpp  main.cpp
src/server/db/: db.cpp  db.hpp
src/server/model/: friend_model.cpp  friend_model.hpp  group.hpp  group_model.cpp  group_model.hpp  group_user.hpp  offline_message_model.cpp  offline_message_model.hpp
